write-job/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-write-api-deployment
  labels:
    app: job-write-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-write-api
  template:
    metadata:
      labels:
        app: job-write-api
    spec:
      containers:
      - name: job-write-api
      # image: job-write:latest za docker image
        image: veljkoskrbic/hirely-job-write-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
