write-job/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: job-write-api-rule
spec:
  entryPoints:
    - myapi
  routes:
    - match: PathPrefix(`/jobWrite`)
      kind: Rule
      middlewares:
        - name: cors-middleware
        - name: auth
      services:
        - name: job-write-api-service
          port: http
